--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>BOOKSTORE</title>
+    <title>BOOK-STORE</title>
 
     <!-- SITE TITTLE -->
     <%- include('../partials/header'); %>
