--- a/views/pages/postad.ejs
+++ b/views/pages/postad.ejs
@@ -33,9 +33,9 @@
               <h6 class="font-weight-bold pt-4 pb-1">Select Ad Category:</h6>
               <select class="form-control" name="category" id="category" required>
                 <option value="" disabled selected hidden>Select Category</option>
-                <option>Electronics</option>
-                <option>Furniture</option>
-                <option>Automobiles</option>
+                <option>Fiction</option>
+                <option>NonFiction</option>
+                <option>Kids</option>
                 <option>Other</option>
               </select>
               <div class="price">
