--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,15 +7,15 @@
         </li>
         
         <li class="nav-item">
-            <a class="nav-link" href="/products/Electronics">Electronics</a>
+            <a class="nav-link" href="/products/Fiction">Fiction</a>
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" href="/products/Furniture">Furniture</a>
+            <a class="nav-link" href="/products/NonFiction">NonFiction</a>
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" href="/products/Automobiles">Automobiles</a>
+            <a class="nav-link" href="/products/Kids">Kids</a>
         </li>
 
         <li class="nav-item">
