UPDATED AND ADDED DETAILS

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -11,20 +11,21 @@
 <body>
 
     <%- include('../partials/head'); %>
-    
+     
     <!--Navbar-->
     <%- include('../partials/navbar'); %>
 
         <!--Section1-->
 
         <div class="container" style="margin-top: 10px;">
-            <img class="mySlides img-fluid" src="./images/Furniture_sale.jpg" style="width:100%;">
-            <img class="mySlides img-fluid" src="./images/electro.png" style="width:100%;">
+        <img class="mySlides img-fluid" src="./images/2560.jpg" style="width:100%;">
+            <img class="mySlides img-fluid" src="./images/kid.jpg" style="width:100%;">
+            <img class="mySlides img-fluid" src="./images/nonfiction.jpg" style="width:100%;">
         </div>
         <!--Section1-->
 
 
-        <div class="container" style="margin-top: 20px;">
+        <div class="container" style="margin-top: 20px; background:black;">
             <div class="row">
 
             </div>
