--- a/views/pages/myads.ejs
+++ b/views/pages/myads.ejs
@@ -14,7 +14,7 @@
           <section class="dashboard section">
                 <!-- Container Start -->
                 <div class="container">
-                    <h3>My Ads</h3>
+                    <h1>My Book Ads</h1>
                     <table class="table">
                         <thead>
                             <tr>
