--- a/views/pages/postad.ejs
+++ b/views/pages/postad.ejs
@@ -8,38 +8,37 @@
 
 </head>
 
-<body class="body-wrapper">
+<body class="body-wrapper" style="background: brown">
   <%- include('../partials/head'); %>
   <!--Navbar-->
    <%- include('../partials/navbar'); %>
 
    
-    <div class="container">
-      <form action="/add-data" enctype="multipart/form-data" method="POST">
+    <div class="container"  style="background:grey"; >
+      <form action="/add-data" enctype="multipart/form-data" method="POST" >
         <!-- Post Your ad start -->
         <fieldset class="border border-gary p-4 mb-5">
           <div class="row">
             <div class="col-lg-12">
-              <h3>Post Your ad</h3>
+              <h3>ADD YOUR BOOK AND DETAILS</h3>
             </div>
             <div class="col-lg-6">
               <h6 class="font-weight-bold pt-4 pb-1">Title Of Ad:</h6>
-              <input type="text" class="border w-100 p-2 bg-white text-capitalize" name="title" placeholder="Ad title go There" required>
+              <input type="text" class="border w-100 p-2 bg-white text-capitalize" name="title" placeholder="Name of the Book" required>
         
               <h6 class="font-weight-bold pt-4 pb-1">Description:</h6>
               <textarea class="border p-3 w-100" rows="7" name="description" placeholder="Write details about your product"></textarea>
             </div>
             <div class="col-lg-6">
-              <h6 class="font-weight-bold pt-4 pb-1">Select Ad Category:</h6>
+              <h6 class="font-weight-bold pt-4 pb-1">Select Category:</h6>
               <select class="form-control" name="category" id="category" required>
                 <option value="" disabled selected hidden>Select Category</option>
                 <option>Fiction</option>
                 <option>NonFiction</option>
                 <option>Kids</option>
-                <option>Other</option>
               </select>
               <div class="price">
-                <h6 class="font-weight-bold pt-4 pb-1">Item Price (₹ IN): </h6>
+                <h6 class="font-weight-bold pt-4 pb-1">Item Price (₹ INR): </h6>
                 <div class="row px-3">
                   <div class="col-lg-4 mr-lg-4 rounded bg-white my-2 ">
                     <input type="number" name="price"  class="border w-100 p-2 bg-white text-capitalize" placeholder="Price" id="price">
@@ -58,11 +57,11 @@
         </fieldset>
         <!-- Post Your ad end -->
 
-        <!-- seller-information start -->
+        <!-- Contact Details -->
         <fieldset class="border p-4 my-5 seller-information bg-gray">
           <div class="row">
             <div class="col-lg-12">
-              <h3>Seller Information</h3>
+              <h3>Contact Information</h3>
             </div>
             <div class="col-lg-6">
               <h6 class="font-weight-bold pt-4 pb-1">Contact Name:</h6>
@@ -76,12 +75,11 @@
               <h6 class="font-weight-bold pt-4 pb-1">Select City:</h6>
               <select class="form-control" name="city" id="city" required>
                 <option value="" disabled selected hidden>Select City</option>
-                <option>Kalyan</option>
                 <option>Mumbai</option>
-                <option>Vasai</option>
-                <option>Virar</option>
+                <option>Pune</option>
+                <option>Juhu</option>
                 <option>Thane</option>
-                <option>Ghatkopar</option>
+                <option>Andheri</option>
               </select>
             </div>
           </div>
