--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,3 +1,4 @@
-<header class="w3-container w3-center w3-padding-16 w3-white" style="padding:auto;">
+<header class="w3-container w3-center w3-padding-16 w3-Black" style="padding:auto;">
     <h1 class="w3-xxxlarge"><b>BookStore</b></h1>
+    
 </header>
